--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,13 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
-
+    api fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    implementation "android.arch.persistence.room:runtime:1.0.0"
+    api 'com.github.QuadFlask:colorpicker:0.0.13'
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
 }
