--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ClientViewPagerActivity"
+            android:parentActivityName="com.alex.devops.MainActivity"
             android:screenOrientation="portrait" />
     </application>
 
