--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.enableAapt2=false
 
-KEYSTORE_PASSWORD=alex
-KEY_PASSWORD=password789
+KEYSTORE_USER_NAME="alex"
+KEYSTORE_PASSWORD="password789"
